Security config updated